# Emotion-aware-ai-android

./: .gitignore  AGENTS.md  Dockerfile  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml  pr-deploy.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.example.emotionawareai.data.database.AppDatabase/: 4.json
app/src/androidTest/java/com/example/emotionawareai/: ChatViewModelTest.kt  LlmAgentResponseTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_engine.cpp
app/src/main/java/com/example/emotionawareai/: EmotionAwareApp.kt  MainActivity.kt
app/src/main/java/com/example/emotionawareai/billing/: BillingManager.kt
app/src/main/java/com/example/emotionawareai/data/database/: AppDatabase.kt  ConversationDao.kt  DiaryEntryDao.kt  EvaluationDao.kt  FeedbackDao.kt  MemoryFragmentDao.kt  MoodCheckInDao.kt  SessionGoalDao.kt  UserPreferenceDao.kt  WeeklyInsightDao.kt
app/src/main/java/com/example/emotionawareai/data/model/: ConversationEntity.kt  DiaryEntryEntity.kt  EvaluationEntity.kt  FeedbackEntity.kt  MemoryFragmentEntity.kt  MessageEntity.kt  MoodCheckInEntity.kt  SessionGoalEntity.kt  UserPreferenceEntity.kt  WeeklyInsightEntity.kt
app/src/main/java/com/example/emotionawareai/di/: AppModule.kt
app/src/main/java/com/example/emotionawareai/domain/model/: ActivityCaption.kt  ChatMessage.kt  ConversationContext.kt  Emotion.kt  EvaluationMetric.kt  GrowthArea.kt  KeywordExtractor.kt  LlmOption.kt  MemoryFragment.kt  MoodCheckIn.kt  PiperVoice.kt  PremiumFeature.kt  SessionGoal.kt  TtsBackend.kt  TtsVoiceProfile.kt  WeeklyInsight.kt
app/src/main/java/com/example/emotionawareai/domain/repository/: ConversationRepository.kt  IMemoryRepository.kt  MemoryFragmentRepository.kt
app/src/main/java/com/example/emotionawareai/engine/: ActivityAnalyzer.kt  DeviceCapabilityDetector.kt  EmotionDetector.kt  LLMEngine.kt  ModelDownloader.kt  ModelFileLocator.kt
app/src/main/java/com/example/emotionawareai/evaluation/: AIEvaluationEngine.kt  LangfuseTraceManager.kt
app/src/main/java/com/example/emotionawareai/manager/: ConversationManager.kt  InsightsGenerator.kt  MemoryManager.kt  ResponseEngine.kt
app/src/main/java/com/example/emotionawareai/security/: SecureTokenStorage.kt
app/src/main/java/com/example/emotionawareai/tts/: AssistantTtsBackend.kt  PiperVoiceManager.kt  SherpaOnnxTtsBackend.kt  SystemTtsBackend.kt
app/src/main/java/com/example/emotionawareai/ui/: ChatViewModel.kt
app/src/main/java/com/example/emotionawareai/ui/component/: AIFeedbackSheet.kt  ActivityCaptionOverlay.kt  AgentPresenceAnimation.kt  DailyCheckInSheet.kt  EmotionIndicator.kt  MessageBubble.kt  ParticleTextAnimation.kt  PrivacyNoticeDialog.kt  TelemetryDashboard.kt  VoiceInputButton.kt  VoiceModeOverlay.kt
app/src/main/java/com/example/emotionawareai/ui/navigation/: AppNavigation.kt
app/src/main/java/com/example/emotionawareai/ui/screen/: ChatScreen.kt  DiaryScreen.kt  (+9 more)
app/src/main/java/com/example/emotionawareai/voice/: AudioToneAnalyzer.kt  VoiceProcessor.kt
app/src/main/java/com/k2fsa/sherpa/onnx/: GeneratedAudio.java  OfflineTts.java  OfflineTtsConfig.java  OfflineTtsModelConfig.java  OfflineTtsVitsModelConfig.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/com/example/emotionawareai/: ConversationManagerTest.kt  EmotionDetectorTest.kt
app/src/test/java/com/example/emotionawareai/engine/: ActivityAnalyzerTest.kt  LLMEngineTest.kt
app/src/test/java/com/example/emotionawareai/ui/: ChatViewModelLlmSetupTest.kt  ChatViewModelSpeechVideoTest.kt
app/src/test/java/com/example/emotionawareai/voice/: VoiceProcessorLogicTest.kt
docs/screenshots/: README.md
docs/user_guide/: USER_GUIDE.md
gradle/: libs.versions.toml
scripts/: capture_runtime_screenshots.py  capture_screenshots.py
(+3 files in other folders)
